chore: add text in footer

--- a/src/translations/compiled/en.json
+++ b/src/translations/compiled/en.json
@@ -53,6 +53,12 @@
       "value": "Select Image"
     }
   ],
+  "fkoPmX": [
+    {
+      "type": 0,
+      "value": "This site won't upload your images."
+    }
+  ],
   "jvo0vs": [
     {
       "type": 0,
