--- a/src/translations/compiled/zh-CN.json
+++ b/src/translations/compiled/zh-CN.json
@@ -57,6 +57,12 @@
       "value": "选择图片"
     }
   ],
+  "fkoPmX": [
+    {
+      "type": 0,
+      "value": "本网站不会上传您的图片"
+    }
+  ],
   "jvo0vs": [
     {
       "type": 0,
