--- a/src/translations/compiled/zh-TW.json
+++ b/src/translations/compiled/zh-TW.json
@@ -57,6 +57,12 @@
       "value": "選擇圖片"
     }
   ],
+  "fkoPmX": [
+    {
+      "type": 0,
+      "value": "此網站不會上傳您的圖片."
+    }
+  ],
   "jvo0vs": [
     {
       "type": 0,
