--- a/src/translations/uncompiled/en.json
+++ b/src/translations/uncompiled/en.json
@@ -14,6 +14,9 @@
   "XmcDl5": {
     "defaultMessage": "Select Image"
   },
+  "fkoPmX": {
+    "defaultMessage": "This site won't upload your images."
+  },
   "jvo0vs": {
     "defaultMessage": "Save"
   },
