--- a/src/translations/uncompiled/zh-CN.json
+++ b/src/translations/uncompiled/zh-CN.json
@@ -20,6 +20,9 @@
   "DqKd4r": {
     "defaultMessage": "百分比"
   },
+  "fkoPmX": {
+    "defaultMessage": "本网站不会上传您的图片"
+  },
   "jvo0vs": {
     "defaultMessage": "保存"
   },
