--- a/src/translations/uncompiled/zh-TW.json
+++ b/src/translations/uncompiled/zh-TW.json
@@ -20,6 +20,9 @@
   "DqKd4r": {
     "defaultMessage": "百分"
   },
+  "fkoPmX": {
+    "defaultMessage": "此網站不會上傳您的圖片."
+  },
   "jvo0vs": {
     "defaultMessage": "下載"
   },
