--- a/src/translations/uncompiled/zh-CN.json
+++ b/src/translations/uncompiled/zh-CN.json
@@ -34,5 +34,62 @@
   },
   "zygaPB": {
     "defaultMessage": "在线调整图片大小"
+  },
+  "7Rm1x6": {
+    "defaultMessage": "常见问题"
+  },
+  "F6mgp+": {
+    "defaultMessage": "如果您还有其他问题，请联系我们"
+  },
+  "TdbNEG": {
+    "defaultMessage": "还有问题？"
+  },
+  "faq-answer-0": {
+    "defaultMessage": "是的，完全免费。没有任何隐藏或订阅的费用。"
+  },
+  "faq-answer-1": {
+    "defaultMessage": "是的，完全可以。我们支持所有现代浏览器。"
+  },
+  "faq-answer-2": {
+    "defaultMessage": "不，我们不会存储您的图片。我们不会把您的图片上传到服务器。"
+  },
+  "faq-answer-3": {
+    "defaultMessage": "很简单。只需按照以下步骤操作： <br></br> - 从你的设备上选择图片。<br></br> - 选择你想调整的尺寸. <br></br> - 点击 \"保存\" 按钮下载调整后的图片."
+  },
+  "faq-answer-4": {
+    "defaultMessage": "是的，你可以。只需选择多张图片并点击确定按钮。"
+  },
+  "faq-question-0": {
+    "defaultMessage": "这是免费的吗？"
+  },
+  "faq-question-1": {
+    "defaultMessage": "可以在手机上使用吗？"
+  },
+  "faq-question-2": {
+    "defaultMessage": "你们会保存我的图片吗？"
+  },
+  "faq-question-3": {
+    "defaultMessage": "如何调整图片大小？"
+  },
+  "faq-question-4": {
+    "defaultMessage": "可以批量调整图片大小吗？"
+  },
+  "feature-text-0": {
+    "defaultMessage": "从您的设备中选择图像，并根据您的需求调整图像尺寸"
+  },
+  "feature-text-1": {
+    "defaultMessage": "我们不会上传您的图片。所有操作都是在本地进行的"
+  },
+  "feature-text-2": {
+    "defaultMessage": "您可以一次选择多张图片并调整它们的大小"
+  },
+  "feature-title-0": {
+    "defaultMessage": "使用简单"
+  },
+  "feature-title-1": {
+    "defaultMessage": "安全"
+  },
+  "feature-title-2": {
+    "defaultMessage": "批量操作"
   }
 }
