--- a/src/translations/compiled/zh-TW.json
+++ b/src/translations/compiled/zh-TW.json
@@ -207,6 +207,12 @@
       "value": "此網站不會上傳您的圖片."
     }
   ],
+  "head.meta.description": [
+    {
+      "type": 0,
+      "value": "將圖片調整到任何你想要的大小。幾乎支持所有圖片格式, JPEG, PNG, GIF, TIFF, BMP, ICO, SVG, 等。批量調整圖片尺寸，壓縮圖片。"
+    }
+  ],
   "jvo0vs": [
     {
       "type": 0,
