chore: update translations

--- a/src/translations/compiled/zh-CN.json
+++ b/src/translations/compiled/zh-CN.json
@@ -106,7 +106,7 @@
     },
     {
       "type": 0,
-      "value": " - 从你的设备上选择图片。"
+      "value": " - 从你的设备上选择图片 "
     },
     {
       "children": [
@@ -116,7 +116,7 @@
     },
     {
       "type": 0,
-      "value": " - 选择你想调整的尺寸. "
+      "value": " - 选择你想调整的尺寸 "
     },
     {
       "children": [
@@ -126,7 +126,7 @@
     },
     {
       "type": 0,
-      "value": " - 点击 \"保存\" 按钮下载调整后的图片."
+      "value": " - 点击 \"保存\" 按钮下载调整后的图片"
     }
   ],
   "faq-answer-4": [
