--- a/src/translations/compiled/zh-TW.json
+++ b/src/translations/compiled/zh-TW.json
@@ -106,7 +106,7 @@
     },
     {
       "type": 0,
-      "value": " - 從您的設備中選擇圖像。 "
+      "value": " - 從您的設備中選擇圖像 "
     },
     {
       "children": [
@@ -116,7 +116,7 @@
     },
     {
       "type": 0,
-      "value": " - 選擇您想要調整它們的大小。 "
+      "value": " - 選擇您想要調整它們的大小 "
     },
     {
       "children": [
@@ -126,7 +126,7 @@
     },
     {
       "type": 0,
-      "value": " - 單擊 “保存” 按鈕下載調整大小後的圖像。"
+      "value": " - 單擊 “保存” 按鈕下載調整大小後的圖像"
     }
   ],
   "faq-answer-4": [
