--- a/src/translations/uncompiled/zh-CN.json
+++ b/src/translations/uncompiled/zh-CN.json
@@ -51,7 +51,7 @@
     "defaultMessage": "不，我们不会存储您的图片。我们不会把您的图片上传到服务器。"
   },
   "faq-answer-3": {
-    "defaultMessage": "很简单。只需按照以下步骤操作： <br></br> - 从你的设备上选择图片。<br></br> - 选择你想调整的尺寸. <br></br> - 点击 \"保存\" 按钮下载调整后的图片."
+    "defaultMessage": "很简单。只需按照以下步骤操作： <br></br> - 从你的设备上选择图片 <br></br> - 选择你想调整的尺寸 <br></br> - 点击 \"保存\" 按钮下载调整后的图片"
   },
   "faq-answer-4": {
     "defaultMessage": "是的，你可以。只需选择多张图片并点击确定按钮。"
