--- a/src/translations/uncompiled/zh-TW.json
+++ b/src/translations/uncompiled/zh-TW.json
@@ -54,7 +54,7 @@
     "defaultMessage": "不，我們不会。 我們不存儲您的圖像。 我們不會上傳您的圖片。"
   },
   "faq-answer-3": {
-    "defaultMessage": "很容易。 只需按照以下步驟： <br></br> - 從您的設備中選擇圖像。 <br></br> - 選擇您想要調整它們的大小。 <br></br> - 單擊 “保存” 按鈕下載調整大小後的圖像。"
+    "defaultMessage": "很容易。 只需按照以下步驟： <br></br> - 從您的設備中選擇圖像 <br></br> - 選擇您想要調整它們的大小 <br></br> - 單擊 “保存” 按鈕下載調整大小後的圖像"
   },
   "faq-answer-4": {
     "defaultMessage": "是的你可以。 只需選擇多個圖像並單擊確定按鈕。"
