chore: style and update translations

--- a/src/translations/compiled/zh-CN.json
+++ b/src/translations/compiled/zh-CN.json
@@ -174,7 +174,7 @@
   "feature-text-1": [
     {
       "type": 0,
-      "value": "我们不会上传您的图片。所有操作都是在本地进行的"
+      "value": "我们不会上传您的图片，所有操作都在您的设备上完成"
     }
   ],
   "feature-text-2": [
