--- a/src/translations/uncompiled/zh-TW.json
+++ b/src/translations/uncompiled/zh-TW.json
@@ -78,7 +78,7 @@
     "defaultMessage": "從您的設備中選擇圖像並根據自己的喜好調整它們的大小。"
   },
   "feature-text-1": {
-    "defaultMessage": "我們不會上傳您的圖片。 所有操作都在您的設備上完成。"
+    "defaultMessage": "我們不會上傳您的圖片，所有操作都在您的設備上完成。"
   },
   "feature-text-2": {
     "defaultMessage": "您可以一次選擇多個圖像並調整它們的大小。"
