--- a/src/translations/uncompiled/zh-CN.json
+++ b/src/translations/uncompiled/zh-CN.json
@@ -75,7 +75,7 @@
     "defaultMessage": "从您的设备中选择图像，并根据您的需求调整图像尺寸"
   },
   "feature-text-1": {
-    "defaultMessage": "我们不会上传您的图片。所有操作都是在本地进行的"
+    "defaultMessage": "我们不会上传您的图片，所有操作都在您的设备上完成"
   },
   "feature-text-2": {
     "defaultMessage": "您可以一次选择多张图片并调整它们的大小"
