--- a/src/translations/compiled/zh-TW.json
+++ b/src/translations/compiled/zh-TW.json
@@ -174,7 +174,7 @@
   "feature-text-1": [
     {
       "type": 0,
-      "value": "我們不會上傳您的圖片，所有操作都在您的設備上完成。"
+      "value": "我們不會上傳您的圖片，所有工作都在您的設備上完成。"
     }
   ],
   "feature-text-2": [
