--- a/src/translations/compiled/zh-CN.json
+++ b/src/translations/compiled/zh-CN.json
@@ -45,6 +45,12 @@
       "value": "常见问题"
     }
   ],
+  "9Xql9G": [
+    {
+      "type": 0,
+      "value": "快速、简单、"
+    }
+  ],
   "DqKd4r": [
     {
       "type": 0,
@@ -57,10 +63,22 @@
       "value": "如果您还有其他问题，请联系我们"
     }
   ],
+  "IRioK2": [
+    {
+      "type": 0,
+      "value": "安全"
+    }
+  ],
   "TdbNEG": [
     {
       "type": 0,
       "value": "还有问题？"
+    }
+  ],
+  "UsI+7u": [
+    {
+      "type": 0,
+      "value": "调整图片大小"
     }
   ],
   "VkTlIS": [
