--- a/src/translations/compiled/zh-TW.json
+++ b/src/translations/compiled/zh-TW.json
@@ -45,6 +45,12 @@
       "value": "常見問題"
     }
   ],
+  "9Xql9G": [
+    {
+      "type": 0,
+      "value": "快速、簡單、"
+    }
+  ],
   "DqKd4r": [
     {
       "type": 0,
@@ -57,10 +63,22 @@
       "value": "如果您還有其他問題，请联系我们"
     }
   ],
+  "IRioK2": [
+    {
+      "type": 0,
+      "value": "安全"
+    }
+  ],
   "TdbNEG": [
     {
       "type": 0,
       "value": "還有問題？"
+    }
+  ],
+  "UsI+7u": [
+    {
+      "type": 0,
+      "value": "調整圖像大小"
     }
   ],
   "VkTlIS": [
