style: fix work not break on mobile device

--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -2,7 +2,7 @@
 date: 2022-04-29
 ---
 
-<article className="prose prose-slate dark:prose-invert pt-5 sm:pt-10">
+<article className="prose prose-slate dark:prose-invert pt-5 sm:pt-10 break-words">
 
 ## Privacy Policy for image-resize.com
 
