--- a/src/translations/compiled/zh-TW.json
+++ b/src/translations/compiled/zh-TW.json
@@ -51,6 +51,12 @@
       "value": "快速、簡單、"
     }
   ],
+  "AILw8N": [
+    {
+      "type": 0,
+      "value": "调整圖片大小可以很簡單"
+    }
+  ],
   "DqKd4r": [
     {
       "type": 0,
@@ -91,6 +97,36 @@
     {
       "type": 0,
       "value": "選擇圖片"
+    }
+  ],
+  "copy": [
+    {
+      "children": [
+        {
+          "type": 0,
+          "value": " image-resize.com "
+        }
+      ],
+      "type": 8,
+      "value": "span"
+    },
+    {
+      "type": 0,
+      "value": " 是一個專門為您的圖像調整大小需求而設計的網站。我們提供簡單易用的批量處理功能，讓您可以輕鬆一次調整多張圖像的大小。此外，我們還提供各種不同的調整選項，支持百分比和具體值。例如，您可以設置圖像的寬度和高度，或者設置縮放比例。在安全方面，我們承諾不保存您的圖像，以確保您的數據隱私。另外，我們的服務完全免費，所以您無需支付任何費用來使用它。總的來說，"
+    },
+    {
+      "children": [
+        {
+          "type": 0,
+          "value": " image-resize.com "
+        }
+      ],
+      "type": 8,
+      "value": "span"
+    },
+    {
+      "type": 0,
+      "value": " 是一個非常有用的網站，對於任何需要調整圖像大小的人都很有用。"
     }
   ],
   "faq-answer-0": [
