--- a/src/translations/uncompiled/zh-CN.json
+++ b/src/translations/uncompiled/zh-CN.json
@@ -100,5 +100,11 @@
   },
   "IRioK2": {
     "defaultMessage": "安全"
+  },
+  "AILw8N": {
+    "defaultMessage": "调整图片大小可以很简单"
+  },
+  "copy": {
+    "defaultMessage": "<span> image-resize.com </span> 是一个专为满足用户图片调整大小需求而设计的网站。我们提供简单易用的批量操作功能，让您轻松调整多张图片的大小。此外，我们还提供各种不同的调整选项，支持使用百分比和具体数值进行调整。例如，您可以设置图片的宽度和高度，或者设置图片的缩放比例。安全性方面，我们承诺不会保存用户的图片，以确保您的隐私安全。另外，我们的服务完全免费，您无需支付任何费用即可使用。总的来说，<span> image-resize.com </span> 是一个非常实用的网站，适合所有需要调整图片大小的用户。"
   }
 }
