--- a/src/translations/compiled/zh-CN.json
+++ b/src/translations/compiled/zh-CN.json
@@ -51,6 +51,12 @@
       "value": "快速、简单、"
     }
   ],
+  "AILw8N": [
+    {
+      "type": 0,
+      "value": "调整图片大小可以很简单"
+    }
+  ],
   "DqKd4r": [
     {
       "type": 0,
@@ -91,6 +97,36 @@
     {
       "type": 0,
       "value": "选择图片"
+    }
+  ],
+  "copy": [
+    {
+      "children": [
+        {
+          "type": 0,
+          "value": " image-resize.com "
+        }
+      ],
+      "type": 8,
+      "value": "span"
+    },
+    {
+      "type": 0,
+      "value": " 是一个专为满足用户图片调整大小需求而设计的网站。我们提供简单易用的批量操作功能，让您轻松调整多张图片的大小。此外，我们还提供各种不同的调整选项，支持使用百分比和具体数值进行调整。例如，您可以设置图片的宽度和高度，或者设置图片的缩放比例。安全性方面，我们承诺不会保存用户的图片，以确保您的隐私安全。另外，我们的服务完全免费，您无需支付任何费用即可使用。总的来说，"
+    },
+    {
+      "children": [
+        {
+          "type": 0,
+          "value": " image-resize.com "
+        }
+      ],
+      "type": 8,
+      "value": "span"
+    },
+    {
+      "type": 0,
+      "value": " 是一个非常实用的网站，适合所有需要调整图片大小的用户。"
     }
   ],
   "faq-answer-0": [
