--- a/src/translations/uncompiled/zh-TW.json
+++ b/src/translations/uncompiled/zh-TW.json
@@ -103,5 +103,11 @@
   },
   "IRioK2": {
     "defaultMessage": "安全"
+  },
+  "AILw8N": {
+    "defaultMessage": "调整圖片大小可以很簡單"
+  },
+  "copy": {
+    "defaultMessage": "<span> image-resize.com </span> 是一個專門為您的圖像調整大小需求而設計的網站。我們提供簡單易用的批量處理功能，讓您可以輕鬆一次調整多張圖像的大小。此外，我們還提供各種不同的調整選項，支持百分比和具體值。例如，您可以設置圖像的寬度和高度，或者設置縮放比例。在安全方面，我們承諾不保存您的圖像，以確保您的數據隱私。另外，我們的服務完全免費，所以您無需支付任何費用來使用它。總的來說，<span> image-resize.com </span> 是一個非常有用的網站，對於任何需要調整圖像大小的人都很有用。"
   }
 }
